increased z-index to hopefully avoid z-index issue in IE

--- a/durandal02/css/app.css
+++ b/durandal02/css/app.css
@@ -283,7 +283,7 @@ font-family: 'Source Sans Pro', serif; /* google font */
 }
 
 .leaflet-control-mapbox-geocoder-results {
-    z-index: 1;
+    z-index: 10;
 }
 
 #imapModal .centered {
